# multi-memory-plugin

./: .gitignore  AGENT.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  CORE-INTEGRATION-SPEC.md  Makefile  README.md  RESEARCH_REPORT.md  __init__.py  plugin.yaml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
.hermes/plans/: 2026-06-10_hermes-guard-implementation.md
research/: hermes-guard-ux-report.md
scripts/: health_check.py  install.sh  setup.sh
src/multi_memory/: __init__.py  adapters.py  budget.py  cli.py  config.py  discovery.py  health.py  plugin.yaml  validate.py
tests/: conftest.py  test_adapters.py  test_adapters_extra.py  test_api_parity.py  test_budget.py  test_cli.py  test_config.py  test_discovery.py  test_eighth_pass.py  test_fifth_pass.py  test_fourth_pass.py  test_generic_adapter.py  test_health.py  test_ninth_pass.py  test_second_pass.py  test_seventh_pass.py  test_sixth_pass.py  test_third_pass.py
