[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name        = "multi-memory"
version     = "0.2.0"
description = "Standalone multi-destination MemoryProvider for Hermes Agent"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mem0        = ["mem0ai>=0.1"]
holographic = []             # stdlib-only
honcho      = ["honcho-ai"]
mnemosyne   = []             # stdlib-only
all         = ["multi-memory[mem0,holographic,honcho,mnemosyne]"]

[tool.setuptools.packages.find]
where = ["src"]
