[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name        = "multi-memory"
version     = "0.2.0"
description = "Standalone multi-destination MemoryProvider for Hermes Agent"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
mem0        = ["mem0ai>=0.1"]
holographic = []             # stdlib-only
honcho      = ["honcho-ai"]
mnemosyne   = []             # stdlib-only
all         = ["multi-memory[mem0,holographic,honcho,mnemosyne]"]
test        = ["pytest>=7", "pytest-cov>=4"]

# [project.scripts] intentionally omitted — this is an Hermes plugin,
# not a CLI tool.  Consumers load it via the ``register(ctx)`` entry
# point in ``src/multi_memory/__init__.py``.

[tool.setuptools.packages.find]
where = ["src"]
