[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name        = "multi-memory"
version     = "0.10.0"
description = "Standalone multi-destination MemoryProvider for Hermes Agent"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
mem0        = ["mem0ai>=0.1"]
holographic = []             # stdlib-only
honcho      = ["honcho-ai"]
mnemosyne   = []             # stdlib-only (user-installed plugin)
openviking  = ["openviking"]
hindsight   = ["hindsight-client"]
retaindb    = []             # uses urllib, no pip dep
byterover   = []             # CLI tool (npm), not pip
supermemory = ["supermemory"]
all         = ["multi-memory[mem0,holographic,honcho,mnemosyne,openviking,hindsight,retaindb,byterover,supermemory]"]
test        = ["pytest>=7", "pytest-cov>=4", "ruff", "mypy"]

# [project.scripts] intentionally omitted — this is an Hermes plugin,
# not a CLI tool.  Consumers load it via the ``register(ctx)`` entry
# point in ``src/multi_memory/__init__.py``.

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["PLC0415"]  # intentional conditional imports
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "C4", "PERF", "PL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["N999"]  # plugin entry point, not a regular module

[tool.mypy]
packages = ["multi_memory"]
ignore_missing_imports = true
warn_unused_ignores = true
